src/styles/index.css
@import url('//at.alicdn.com/t/font_2218836_j05ssjb9nb.css');

:root {
  --pw-header-bgcolor: #e2e2e2;
  --pw-title-color: black;
  --primary-color: #409eff;
  --primary-btn-size: 60px;
  --blog-bgcolor: white;
  --blog-color: black;
  --input-bgcolor: #f4f5f7;
  --code-bgcolor: #f8f8f8;
  --dark-gray: #606266;
  --light-gray: #99a2aa;
}

body {
  background-size: cover;
  background-color: var(--blog-bgcolor);
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif,
    Apple Color Emoji, Segoe UI Emoji;
}

::-webkit-scrollbar {
  width: 5px;
  height: 5px;
}

@media (max-width: 1024px) {
  ::-webkit-scrollbar {
    width: 3px;
    height: 3px;
  }
}

::-webkit-scrollbar-thumb {
  border-radius: 3px;
  background-color: var(--dark-gray);
}

::-webkit-scrollbar-corner {
  width: 0;
  height: 0;
}

@keyframes flipInX {
  from {
    transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
    animation-timing-function: ease-in;
    opacity: 0;
  }

  40% {
    transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
    animation-timing-function: ease-in;
  }

  60% {
    transform: perspective(400px) rotate3d(1, 0, 0, 10deg);
    opacity: 1;
  }

  80% {
    transform: perspective(400px) rotate3d(1, 0, 0, -5deg);
  }

  to {
    transform: perspective(400px);
  }
}

@keyframes moveToLeft {
  to {
    transform: translateX(-100%);
  }
}

@keyframes moveFromLeft {
  from {
    transform: translateX(-100%);
  }
}

@keyframes moveFromRight {
  from {
    transform: translateX(100%);
  }
}

@keyframes moveToBottom {
  to {
    transform: translateY(100%);
  }
}

@keyframes moveFromBottom {
  from {
    transform: translateY(100%);
  }
}

@keyframes fadeInUp {
  from {
    opacity: 0;
    transform: translateY(30%);
  }
}

@keyframes zoomIn {
  from {
    opacity: 0;
    transform: scale3d(0.2, 0.2, 0.2);
  }
}

@keyframes zoomOut {
  to {
    opacity: 0;
    transform: scale3d(0.2, 0.2, 0.2);
  }
}

@keyframes fadeInLeft {
  from {
    opacity: 0;
    transform: translateX(-100%);
  }
}

@keyframes fadeOutRight {
  to {
    opacity: 0;
    transform: translateX(100%);
  }
}

@keyframes shadowPulse {
  from {
    box-shadow: 0 0 0 0px rgba(255, 255, 255, 0.2);
  }

  to {
    box-shadow: 0 0 0 20px rgba(255, 255, 255, 0);
  }
}

/* transitionName: moveFromLeft */
.moveFromLeft-enter-active {
  animation: 0.4s ease-in-out moveFromLeft;
}

/* transitionName: flipInX */
.flipInX-enter-active {
  backface-visibility: visible;
  animation: 0.6s ease-in-out flipInX;
}

/* transitionName: MTLFR(move to left from right) */
.MTLFR-enter-active {
  animation: 0.6s ease-in-out moveFromRight;
}

.MTLFR-leave-active {
  animation: 0.6s ease-in-out moveToLeft;
}

/* transitionName: MTBFB(move to bottom from bottom) */
.MTBFB-enter-active {
  animation: 0.6s ease-in-out moveFromBottom;
}

.MTBFB-leave-active {
  animation: 0.6s ease-in-out moveToBottom;
}

/* transitionName: fadeInUp */
.fadeInUp-enter-active {
  animation: 0.3s fadeInUp;
}

/* transitionName: zoom */
.zoom-enter-active {
  animation: 0.4s zoomIn;
}

.zoom-leave-active {
  animation: 0.4s zoomOut;
}

/* transitionName: fade */
.fade-enter-active {
  animation: 0.3s fadeInLeft;
}

.fade-leave-active {
  animation: 0.3s fadeOutRight;
}

/* transitionName: moveLeft */
.moveLeft-enter-active {
  animation: 0.3s ease-in-out moveFromLeft;
}

.moveLeft-leave-active {
  animation: 0.3s ease-in-out moveToLeft;
}

/* animation */
.shadowPulse {
  animation: 1s infinite shadowPulse;
}

